Finally got columns to stop overlapping!

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,20 @@
+* {
+  box-sizing: border-box;
+}
+
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
+
 body {
     margin: 60px auto;
     width: 70%;
@@ -57,78 +74,27 @@ ol.a {
     list-style-type: lower-alpha;
 }
 
-.grid {
-  display: flex;
- }
-
-.col-md-12 {
- flex: 1;
- float: left;
- width: 50%;
- padding: 10px;
-}
-
-img[src*='#left'] {
-    float: left;
-}
-img[src*='#right'] {
-    float: right;
-}
-img[src*='#center'] {
-    display: block;
-    margin: auto;
-}
-
-img[alt=Picture description] { width: 200px; }
-
 .center-image
 {
     margin: 0 0 0 0;
-    display: block;
+    display: inline-block;
 }
 
 .image-size
 {
-    width: 300px;
+    max-width: 100%;
+    height: auto;
 }
 
 .research-image-size
 {
-    width: 500px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-[class*="col-"] {
-  float: left;
-  padding: 15px;
+    max-width: 100%;
+    height: auto;
 }
 
 [class*="col-"] {
   width: 100%;
 }
-
-
-/* For desktop: */
-/*
-.col-1 {width: 45%;}
-.col-2 {width: 45%;}
-*/
-
-/* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
-/*
-@media only screen and (max-width: 768px) {
-  [class*="col-"] {
-    width: 100%;
-  }
-
-}
-*/
 
 @media only screen and (min-width: 600px) {
   /* For tablets: */
@@ -138,6 +104,6 @@ img[alt=Picture description] { width: 200px; }
 
 @media only screen and (min-width: 768px) {
   /* For desktop: */
-  .col-1 {width: 45%;}
-  .col-2 {width: 45%;}
+  .col-1 {width: 40%;}
+  .col-2 {width: 60%;}
 }
